--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -23,7 +23,8 @@
           <h2>Hello <%=user%> </h2>
           <a href="/logout">Logout</a>
       <% } else { %>
-          <a href="/register">Register</a>
+          <a href="/register-company">Register a Company</a>
+          <a href="/register-customer">Register as a Customer</a>
           <a href="/login">Login</a>
       <% } %>
       <script type="text/javascript">
@@ -41,9 +42,7 @@
 <script type="text/javascript" src="/users/users.client.module.js"></script>
 <script type="text/javascript" src="/users/services/authentication.client.service.js"></script>
 
-<script type="text/javascript" src="/example/example.client.module.js"></script>
-<script type="text/javascript" src="/example/controllers/example.client.controller.js"></script>
-<script type="text/javascript" src="/example/config/example.client.routes.js"></script>
+<script type="text/javascript" src="/companies/companies.client.module.js"></script>
 
 <script type="text/javascript" src="/application.js"></script>
 </body>
