--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -16,7 +16,7 @@
     <% } %>
 
     <div class="container">
-        <form class="form-signin" action="/login" method="post">
+        <form class="form-signin" action="/auth/login" method="post">
             <h2 class="form-signin-heading text-center">Login</h2>
 
             <label for="username" class="sr-only">Username</label>
