--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -14,7 +14,7 @@
     <% } %>
 
     <div class="container">
-        <form class="form-signin" action="/api/register" method="post">
+        <form class="form-signin" action="/auth/register" method="post">
             <h2 class="form-signin-heading text-center">Register</h2>
 
             <label for="username" class="sr-only">Username</label>
