--- a/public/js/bootstrap/less/type.less
+++ b/public/js/bootstrap/less/type.less
@@ -272,7 +272,7 @@ blockquote {
   }
 }
 
-// Opposite alignment of blockquote
+// Oppounit alignment of blockquote
 //
 // Heads up: `blockquote.pull-right` has been deprecated as of v3.1.0.
 .blockquote-reverse,
