--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -20,11 +20,14 @@
             <label for="username" class="sr-only">Username</label>
             <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
 
-            <label for="name" class="sr-only">Name</label>
-            <input type="text" id="name" name="name" class="form-control" placeholder="Name" required autofocus>
+            <label for="first_name" class="sr-only">First Name</label>
+            <input type="text" id="first_name" name="first_name" class="form-control" placeholder="First Name" required autofocus>
 
-            <label for="name" class="sr-only">Company Name</label>
-            <input type="text" id="companyname" name="companyname" class="form-control" placeholder="XYZ Company" required autofocus>
+            <label for="last_name" class="sr-only">Last Name</label>
+            <input type="text" id="last_name" name="last_name" class="form-control" placeholder="Last Name" required autofocus>
+
+            <label for="company_name" class="sr-only">Company Name</label>
+            <input type="text" id="company_name" name="company_name" class="form-control" placeholder="XYZ Company" required autofocus>
 
             <label for="email" class="sr-only">E-mail</label>
             <input type="email" id="email" name="email" class="form-control" placeholder="E-mail" required>
