--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -29,6 +29,14 @@
             <label for="company_name" class="sr-only">Company Name</label>
             <input type="text" id="company_name" name="company_name" class="form-control" placeholder="XYZ Company" required autofocus>
 
+
+            <label for="company_name" class="sr-only">Country</label>
+            <input type="text" id="country_name" name="country_name" class="form-control" placeholder="XYZ Country" required autofocus>
+
+
+            <label for="company_name" class="sr-only">State</label>
+            <input type="text" id="state_name" name="state_name" class="form-control" placeholder="XYZ State" required autofocus>
+
             <label for="email" class="sr-only">E-mail</label>
             <input type="email" id="email" name="email" class="form-control" placeholder="E-mail" required>
 
